eliminar tiendaSusc