@@ -19,7 +19,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
@@ -43,6 +42,63 @@ public class ProductoServiceImpl implements ProductoService {
     private final AtributoRepository atributoRepository;
     private final AtributoValorRepository atributoValorRepository;
     private final CloudinaryService cloudinaryService;
+    private final TiendaSuscripcionService suscripcionService; // Inyectado para restricciones de plan
+
+    // ======================== RESTRICCIONES DE PLAN ========================
+
+    private void validarPlanActivoYPermitido(Tienda tienda) {
+        suscripcionService.obtenerSuscripcionVigente(tienda.getId())
+                .filter(sus -> {
+                    String slug = sus.getPlan().getSlug();
+                    return "basico".equalsIgnoreCase(slug) || "pro".equalsIgnoreCase(slug);
+                })
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.FORBIDDEN,
+                        "Necesitas un plan Básico o Pro activo para realizar esta acción."
+                ));
+    }
+
+    private void validarLimiteProductos(Tienda tienda) {
+        long conteoActual = productoRepository.countByTiendaId(tienda.getId());
+        int maxPermitido = suscripcionService.obtenerSuscripcionVigente(tienda.getId())
+                .map(sus -> sus.getPlan().getMaxProductos())
+                .orElse(10); // valor conservador si no hay plan
+
+        if (conteoActual >= maxPermitido) {
+            throw new ResponseStatusException(
+                    HttpStatus.FORBIDDEN,
+                    "Has alcanzado el límite de " + maxPermitido + " productos en tu plan actual."
+            );
+        }
+    }
+
+    private void validarLimiteVariantes(Tienda tienda, List<VarianteRequest> requests, Integer productoIdActual) {
+        // Contar variantes existentes en la tienda
+        long variantesExistentes = varianteRepository.countByTiendaId(tienda.getId());
+
+        // Restar las del producto que estamos editando (para no contarlas como "existentes" al validar nuevas)
+        if (productoIdActual != null) {
+            variantesExistentes -= varianteRepository.countByProductoId(productoIdActual);
+        }
+
+        // Contar cuántas variantes nuevas se están creando (sin id)
+        long variantesNuevas = requests.stream()
+                .filter(req -> req.getId() == null)
+                .count();
+
+        int maxPermitido = suscripcionService.obtenerSuscripcionVigente(tienda.getId())
+                .map(sus -> sus.getPlan().getMaxVariantes())
+                .orElse(50);
+
+        if (variantesExistentes + variantesNuevas > maxPermitido) {
+            throw new ResponseStatusException(
+                    HttpStatus.FORBIDDEN,
+                    "La operación excedería el límite de " + maxPermitido + " variantes en tu plan actual."
+            );
+        }
+    }
+
+    // ======================== MÉTODOS PRINCIPALES ========================
 
     @Override
     public Page<ProductoResponse> buscarPorNombreYEmailUsuario(String nombre, String email, Pageable pageable) {
@@ -62,8 +118,7 @@ public class ProductoServiceImpl implements ProductoService {
 
     @Override
     public Page<ProductoResponse> findAll(Pageable pageable) {
-        Page<ProductoResponse> x=productoRepository.findAll(pageable).map(this::toResponse);
-        return x;
+        return productoRepository.findAll(pageable).map(this::toResponse);
     }
 
     @Override
@@ -84,11 +139,11 @@ public class ProductoServiceImpl implements ProductoService {
     public ProductoResponse save(ProductoRequest request) {
         return save(request, null);
     }
+
     @Override
     @Transactional
     public ProductoResponse save(ProductoRequest request, Integer id) {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        String emailActual = auth.getName();
         boolean esAdmin = auth.getAuthorities().stream()
                 .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
 
@@ -96,8 +151,9 @@ public class ProductoServiceImpl implements ProductoService {
         Tienda tiendaAsignada;
 
         if (id == null) {
-            // CREACIÓN
+            // CREACIÓN DE PRODUCTO
             producto = new Producto();
+
             if (esAdmin) {
                 if (request.getTiendaId() == null) {
                     throw new RuntimeException("tiendaId requerido para ADMIN");
@@ -106,44 +162,60 @@ public class ProductoServiceImpl implements ProductoService {
             } else {
                 tiendaAsignada = tiendaService.getTiendaDelUsuarioActual();
             }
-            // Validar unicidad slug en la tienda
+
+            // RESTRICCIONES DE PLAN
+            validarPlanActivoYPermitido(tiendaAsignada);
+            validarLimiteProductos(tiendaAsignada);
+
+            // Validar slug único
             if (productoRepository.findBySlugAndTiendaId(request.getSlug(), tiendaAsignada.getId()).isPresent()) {
-                throw new RuntimeException("Slug duplicado en esta tienda: " + request.getSlug());
+                throw new ResponseStatusException(HttpStatus.CONFLICT,
+                        "Slug duplicado en esta tienda: " + request.getSlug());
             }
         } else {
-            // EDICIÓN
+            // EDICIÓN DE PRODUCTO
             producto = productoRepository.findById(id)
-                    .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-            // Verificar permisos
-            //if (!esAdmin && !producto.getTienda().getUser().getEmail().equals(emailActual)) {
-            //    throw new AccessDeniedException("No tienes permisos para editar este producto");
-            //}
-            tiendaAsignada = producto.getTienda();  // Mantener la misma tienda
-            // Validar unicidad slug excluyendo este producto
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Producto no encontrado"));
+
+            tiendaAsignada = producto.getTienda();
+
+            // RESTRICCIONES DE PLAN (también en edición, por si se añaden variantes)
+            validarPlanActivoYPermitido(tiendaAsignada);
+
+            // Validar slug único excluyendo este producto
             Optional<Producto> otroConSlug = productoRepository.findBySlugAndTiendaId(request.getSlug(), tiendaAsignada.getId());
             if (otroConSlug.isPresent() && !otroConSlug.get().getId().equals(id)) {
-                throw new RuntimeException("Slug duplicado en esta tienda: " + request.getSlug());
+                throw new ResponseStatusException(HttpStatus.CONFLICT,
+                        "Slug duplicado en esta tienda: " + request.getSlug());
             }
+        }
+
+        // Validar límite de variantes ANTES de procesarlas
+        if (request.getVariantes() != null && !request.getVariantes().isEmpty()) {
+            validarLimiteVariantes(tiendaAsignada, request.getVariantes(), id);
         }
 
         // Setear campos básicos
         producto.setNombre(request.getNombre().trim());
         producto.setSlug(request.getSlug().trim());
+
         Categoria categoria = categoriaRepository.findById(request.getCategoriaId())
-                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
-        // Validar que la categoría pertenezca a la misma tienda
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Categoría no encontrada"));
+
         if (!categoria.getTienda().getId().equals(tiendaAsignada.getId())) {
-            throw new RuntimeException("Categoría no pertenece a esta tienda");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "La categoría no pertenece a esta tienda");
         }
+
         producto.setCategoria(categoria);
         producto.setTienda(tiendaAsignada);
 
-        // Manejar variantes (crear/editar/eliminar)
+        // Procesar variantes
         manejarVariantes(producto, request.getVariantes(), tiendaAsignada);
 
-        // Guardar y retornar
+        // Guardar
         return toResponse(productoRepository.save(producto));
     }
+
     private void manejarVariantes(Producto producto, List<VarianteRequest> variantesRequests, Tienda tienda) {
         if (variantesRequests == null || variantesRequests.isEmpty()) {
             varianteRepository.deleteAll(producto.getVariantes());
@@ -161,7 +233,6 @@ public class ProductoServiceImpl implements ProductoService {
                 .toList();
 
         if (!aEliminar.isEmpty()) {
-            // Opcional: eliminar imágenes antiguas de Cloudinary
             aEliminar.forEach(v -> {
                 if (v.getImagenUrl() != null && !v.getImagenUrl().contains("placehold.co")) {
                     try {
@@ -170,8 +241,7 @@ public class ProductoServiceImpl implements ProductoService {
                             cloudinaryService.delete(publicId);
                         }
                     } catch (Exception e) {
-                        // Loggear pero no fallar la operación
-                        System.err.println("No se pudo eliminar imagen de Cloudinary: " + e.getMessage());
+                        System.err.println("Error eliminando imagen Cloudinary: " + e.getMessage());
                     }
                 }
             });
@@ -181,27 +251,21 @@ public class ProductoServiceImpl implements ProductoService {
         producto.getVariantes().removeAll(aEliminar);
 
         for (VarianteRequest req : variantesRequests) {
-            ProductoVariante variante;
+            ProductoVariante variante = req.getId() != null
+                    ? varianteRepository.findById(req.getId())
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                            "Variante con ID " + req.getId() + " no encontrada"))
+                    : new ProductoVariante();
 
-            if (req.getId() != null) {
-                variante = varianteRepository.findById(req.getId())
-                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                                "Variante con ID " + req.getId() + " no encontrada."));
-            } else {
-                variante = new ProductoVariante();
-                variante.setProducto(producto);
-            }
-
+            variante.setProducto(producto);
             variante.setTienda(tienda);
             variante.setSku(req.getSku().trim());
             variante.setPrecio(req.getPrecio());
             variante.setStock(req.getStock() != null ? req.getStock() : 0);
             variante.setActivo(req.getActivo() != null ? req.getActivo() : true);
 
-            // === SUBIDA DE IMAGEN A CLOUDINARY ===
-            String imagenUrlFinal = null;
-
-            // Caso 1: Se subió un nuevo archivo
+            // Manejo de imagen
+            String imagenUrlFinal;
             if (req.getImagen() != null && !req.getImagen().isEmpty()) {
                 try {
                     Map uploadResult = cloudinaryService.upload(
@@ -213,26 +277,18 @@ public class ProductoServiceImpl implements ProductoService {
                                     "overwrite", true
                             )
                     );
-
                     String publicId = (String) uploadResult.get("public_id");
-                    // URL optimizada: 800x800, auto calidad y formato
                     imagenUrlFinal = cloudinaryService.getResizedUrl(publicId, 800, 800);
-
                 } catch (IOException e) {
                     throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR,
-                            "Error al subir imagen a Cloudinary: " + e.getMessage());
+                            "Error al subir imagen a Cloudinary");
                 }
-            }
-            // Caso 2: Ya tenía imagen y no se cambió → mantener la existente
-            else if (req.getImagenUrl() != null && !req.getImagenUrl().isEmpty()
+            } else if (req.getImagenUrl() != null && !req.getImagenUrl().isEmpty()
                     && !req.getImagenUrl().contains("placehold.co")) {
                 imagenUrlFinal = req.getImagenUrl();
-            }
-            // Caso 3: Sin imagen → placeholder
-            else {
+            } else {
                 imagenUrlFinal = "https://placehold.co/800x800/eeeeee/999999.png?text=Sin+Imagen";
             }
-
             variante.setImagenUrl(imagenUrlFinal);
 
             manejarAtributosValores(variante, req.getAtributos(), tienda);
@@ -245,18 +301,14 @@ public class ProductoServiceImpl implements ProductoService {
         try {
             String[] parts = url.split("/upload/");
             if (parts.length < 2) return null;
-            String afterUpload = parts[1];
-            // Quitar versión si existe (v123456789/)
-            int versionIndex = afterUpload.indexOf("/v");
-            if (versionIndex != -1) {
-                afterUpload = afterUpload.substring(versionIndex + 1);
-                int slashAfterVersion = afterUpload.indexOf("/");
-                if (slashAfterVersion != -1) {
-                    afterUpload = afterUpload.substring(slashAfterVersion + 1);
-                }
+            String after = parts[1];
+            int vIndex = after.indexOf("/v");
+            if (vIndex != -1) {
+                after = after.substring(vIndex + 1);
+                int slash = after.indexOf("/");
+                if (slash != -1) after = after.substring(slash + 1);
             }
-            // Quitar extensión
-            return afterUpload.replaceAll("\\.[a-zA-Z0-9]+$", "");
+            return after.replaceAll("\\.[a-zA-Z0-9]+$", "");
         } catch (Exception e) {
             return null;
         }
@@ -267,34 +319,27 @@ public class ProductoServiceImpl implements ProductoService {
             variante.getAtributos().clear();
             return;
         }
-
         variante.getAtributos().clear();
 
         for (AtributoValorRequest req : atributosRequests) {
-            String nombreAtributo = req.getAtributoNombre().trim();
-            String valorStr = req.getValor().trim();
+            String nombre = req.getAtributoNombre().trim();
+            String valor = req.getValor().trim();
+            if (nombre.isEmpty() || valor.isEmpty()) continue;
 
-            if (nombreAtributo.isEmpty() || valorStr.isEmpty()) {
-                continue; // o throw si prefieres validar fuerte
-            }
-
-            // Buscar o crear Atributo
-            Atributo atributo = atributoRepository.findByNombreAndTiendaId(nombreAtributo, tienda.getId())
+            Atributo atributo = atributoRepository.findByNombreAndTiendaId(nombre, tienda.getId())
                     .orElseGet(() -> {
                         Atributo nuevo = new Atributo();
-                        nuevo.setNombre(nombreAtributo);
+                        nuevo.setNombre(nombre);
                         nuevo.setTienda(tienda);
                         return atributoRepository.save(nuevo);
                     });
 
-            // REUTILIZAR AtributoValor si ya existe (evita duplicados y errores de tienda_id)
-            AtributoValor atributoValor = atributoValorRepository
-                    .findByAtributoIdAndValor(atributo.getId(), valorStr)
+            AtributoValor atributoValor = atributoValorRepository.findByAtributoIdAndValor(atributo.getId(), valor)
                     .orElseGet(() -> {
                         AtributoValor nuevo = new AtributoValor();
                         nuevo.setAtributo(atributo);
                         nuevo.setTienda(tienda);
-                        nuevo.setValor(valorStr);
+                        nuevo.setValor(valor);
                         return atributoValorRepository.save(nuevo);
                     });
 
@@ -302,33 +347,25 @@ public class ProductoServiceImpl implements ProductoService {
         }
     }
 
+    // ======================== RESTO DE MÉTODOS (sin cambios relevantes) ========================
+
     @Override
     @Transactional(readOnly = true)
     public ProductoResponse getProductoByIdParaEdicion(Integer id) {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        String emailActual = auth.getName();
-        boolean esAdmin = auth.getAuthorities().stream()
-                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
-
         Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-
-        //if (!esAdmin && !producto.getTienda().getUser().getEmail().equals(emailActual)) {
-        //    throw new AccessDeniedException("No tienes permisos para acceder a este producto");
-        //}
-
-        // ← Aquí está la magia: devolvemos TODO
-        return toResponseProductoCreate(producto);   // ← ya incluye variantes + atributos + valores
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Producto no encontrado"));
+        return toResponseProductoCreate(producto);
     }
+
     @Override
     @Transactional
     public ProductoResponse toggleActivo(Integer id) {
         Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("No encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Producto no encontrado"));
 
         boolean nuevoEstado = !producto.isActivo();
         producto.setActivo(nuevoEstado);
-        productoRepository.save(producto); // Guardamos el estado del producto
+        productoRepository.save(producto);
 
         if (nuevoEstado) {
             varianteRepository.activarTodasPorProductoId(id);
@@ -336,14 +373,10 @@ public class ProductoServiceImpl implements ProductoService {
             varianteRepository.desactivarTodasPorProductoId(id);
         }
 
-        // FORZAR RELECTURA: Limpiamos la caché de primer nivel y buscamos de nuevo
         productoRepository.flush();
-
-        // Volvemos a buscar el producto para que toResponse() tenga los datos reales de la BD
-        Producto productoActualizado = productoRepository.findById(id).get();
-
-        return toResponse(productoActualizado);
+        return toResponse(productoRepository.findById(id).get());
     }
+
     @Override
     public void deleteById(Integer id) {
         productoRepository.delete(productoRepository.getByIdAndTenant(id));
@@ -352,28 +385,20 @@ public class ProductoServiceImpl implements ProductoService {
     @Override
     public Page<ProductoResponse> findByUserEmail(String email, Pageable pageable) {
         Integer tenantId = TenantContext.getTenantId();
-        if (tenantId == null) {
-            return Page.empty(pageable);
-        }
-        return productoRepository.findAllByTenantId(tenantId, pageable)
-                .map(this::toResponse);
+        if (tenantId == null) return Page.empty(pageable);
+        return productoRepository.findAllByTiendaId(tenantId, pageable).map(this::toResponse);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<ProductoCardResponse> findAllForPublicCatalog(String tiendaSlug) {
         List<Object[]> rows = productoRepository.findRawCatalogByTiendaSlug(tiendaSlug);
-
         Map<Integer, ProductoCardResponse> map = new LinkedHashMap<>();
 
         for (Object[] row : rows) {
             Integer id = (Integer) row[0];
-            Boolean productoActivo = (Boolean) row[8]; // Asegúrate de que tu query incluya producto.activo
-
-            // ← NUEVO: Filtrar productos inactivos desde el principio
-            if (productoActivo == null || !productoActivo) {
-                continue; // Saltar todo el producto si está inactivo
-            }
+            Boolean activo = (Boolean) row[8];
+            if (activo == null || !activo) continue;
 
             ProductoCardResponse p = map.computeIfAbsent(id, k -> {
                 ProductoCardResponse dto = new ProductoCardResponse();
@@ -406,14 +431,11 @@ public class ProductoServiceImpl implements ProductoService {
                 .sorted(Comparator.comparingInt(ProductoCardResponse::getStockTotal).reversed())
                 .toList();
     }
-    /**
-     * Detalle público de un producto por slug
-     */
+
     @Override
     @Transactional(readOnly = true)
     public ProductoCardResponse findByTiendaSlugAndProductoSlug(String tiendaSlug, String productoSlug) {
         List<Object[]> rows = productoRepository.findRawDetailBySlugs(tiendaSlug, productoSlug);
-
         if (rows.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Producto no encontrado o tienda inactiva");
         }
@@ -423,10 +445,7 @@ public class ProductoServiceImpl implements ProductoService {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "El producto no está disponible.");
         }
 
-        // Mapa: productoId → respuesta
-        Map<Integer, ProductoCardResponse> productoMap = new LinkedHashMap<>();
-        // Mapa auxiliar: varianteId → lista de atributos
-        Map<Integer, List<ProductoCardResponse.VarianteCard.AtributoValorDTO>> atributosMap = new HashMap<>();
+        Map<Integer, ProductoCardResponse> map = new LinkedHashMap<>();
 
         for (Object[] row : rows) {
             Integer varianteId = (Integer) row[0];
@@ -439,8 +458,7 @@ public class ProductoServiceImpl implements ProductoService {
             String imagenUrl = (String) row[7];
             Boolean activoVar = (Boolean) row[8];
 
-            // Crear producto base
-            ProductoCardResponse p = productoMap.computeIfAbsent(productoId, k -> {
+            ProductoCardResponse p = map.computeIfAbsent(productoId, k -> {
                 ProductoCardResponse dto = new ProductoCardResponse();
                 dto.setId(productoId);
                 dto.setNombre(nombre);
@@ -450,11 +468,9 @@ public class ProductoServiceImpl implements ProductoService {
                 return dto;
             });
 
-            // Solo procesar variantes activas con precio
             if (activoVar && precio != null) {
-                // Buscar o crear variante
                 ProductoCardResponse.VarianteCard variante = p.getVariantes().stream()
-                        .filter(v -> v.getId() != null && v.getId().equals(varianteId))
+                        .filter(v -> Objects.equals(v.getId(), varianteId))
                         .findFirst()
                         .orElseGet(() -> {
                             ProductoCardResponse.VarianteCard v = new ProductoCardResponse.VarianteCard();
@@ -467,19 +483,18 @@ public class ProductoServiceImpl implements ProductoService {
                             return v;
                         });
 
-                // Agregar atributo si existe
-                String atributoNombre = (String) row[10];
-                String valor = (String) row[11];
-                if (atributoNombre != null && valor != null) {
+                String attrNombre = (String) row[10];
+                String attrValor = (String) row[11];
+                if (attrNombre != null && attrValor != null) {
                     ProductoCardResponse.VarianteCard.AtributoValorDTO attr = new ProductoCardResponse.VarianteCard.AtributoValorDTO();
-                    attr.setAtributoNombre(atributoNombre);
-                    attr.setValor(valor);
+                    attr.setAtributoNombre(attrNombre);
+                    attr.setValor(attrValor);
                     variante.getAtributos().add(attr);
                 }
             }
         }
 
-        ProductoCardResponse resultado = productoMap.values().iterator().next();
+        ProductoCardResponse resultado = map.values().iterator().next();
         calcularCamposDerivados(resultado);
 
         if (resultado.getStockTotal() <= 0) {
@@ -488,60 +503,39 @@ public class ProductoServiceImpl implements ProductoService {
 
         return resultado;
     }
-    /**
-     * Método reutilizable: calcula precio mínimo, stock total e imagen principal
-     */
+
     private void calcularCamposDerivados(ProductoCardResponse p) {
         List<ProductoCardResponse.VarianteCard> activas = p.getVariantes().stream()
                 .filter(ProductoCardResponse.VarianteCard::isActivo)
                 .toList();
 
-        // Stock total
-        int stockTotal = activas.stream()
-                .mapToInt(ProductoCardResponse.VarianteCard::getStock)
-                .sum();
+        int stockTotal = activas.stream().mapToInt(ProductoCardResponse.VarianteCard::getStock).sum();
         p.setStockTotal(stockTotal);
 
-        // Precio mínimo
         activas.stream()
                 .map(ProductoCardResponse.VarianteCard::getPrecio)
                 .min(BigDecimal::compareTo)
-                .ifPresentOrElse(
-                        p::setPrecioMinimo,
-                        () -> p.setPrecioMinimo(BigDecimal.ZERO)
-                );
+                .ifPresentOrElse(p::setPrecioMinimo, () -> p.setPrecioMinimo(BigDecimal.ZERO));
 
-        // Imagen principal = primera variante activa
         activas.stream()
                 .findFirst()
                 .map(ProductoCardResponse.VarianteCard::getImagenUrl)
-                .ifPresentOrElse(
-                        p::setImagenPrincipal,
-                        () -> p.setImagenPrincipal("https://placehold.co/800x800/eeeeee/999999.png?text=Sin+Imagen")
-                );
+                .ifPresentOrElse(p::setImagenPrincipal,
+                        () -> p.setImagenPrincipal("https://placehold.co/800x800/eeeeee/999999.png?text=Sin+Imagen"));
     }
+
     @Override
     @Transactional(readOnly = true)
     public List<DropTownStandar> getProductosForDropdown() {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        boolean esAdmin = auth.getAuthorities().stream()
-                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
+        boolean esAdmin = auth.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
 
-        List<Producto> productos;
+        List<Producto> productos = esAdmin
+                ? productoRepository.findAllByOrderByNombreAsc()
+                : Optional.ofNullable(TenantContext.getTenantId())
+                .map(productoRepository::findByTiendaIdOrderByNombreAsc)
+                .orElse(Collections.emptyList());
 
-        if (esAdmin) {
-            // ADMIN ve todos los productos
-            productos = productoRepository.findAllByOrderByNombreAsc();
-        } else {
-            // OWNER solo ve los de su tienda
-            Integer tenantId = TenantContext.getTenantId();
-            if (tenantId == null) {
-                return Collections.emptyList();
-            }
-            productos = productoRepository.findByTiendaIdOrderByNombreAsc(tenantId);
-        }
-
-        // Convertir a DTO estándar
         return productos.stream()
                 .map(p -> {
                     DropTownStandar dto = new DropTownStandar();
@@ -551,6 +545,7 @@ public class ProductoServiceImpl implements ProductoService {
                 })
                 .toList();
     }
+
     private ProductoResponse toResponse(Producto p) {
         ProductoResponse resp = new ProductoResponse();
         resp.setId(p.getId());
@@ -562,6 +557,7 @@ public class ProductoServiceImpl implements ProductoService {
         resp.setActivo(p.isActivo());
         return resp;
     }
+
     private ProductoResponse toResponseProductoCreate(Producto producto) {
         ProductoResponse response = new ProductoResponse();
         response.setId(producto.getId());
@@ -572,7 +568,6 @@ public class ProductoServiceImpl implements ProductoService {
         response.setTiendaId(producto.getTienda().getId());
         response.setActivo(producto.isActivo());
 
-        // Variantes + atributos
         List<VarianteResponse> variantesResponse = producto.getVariantes().stream()
                 .map(v -> {
                     VarianteResponse vr = new VarianteResponse();
@@ -583,7 +578,6 @@ public class ProductoServiceImpl implements ProductoService {
                     vr.setImagenUrl(v.getImagenUrl());
                     vr.setActivo(v.isActivo());
 
-                    // Atributos de esta variante
                     List<AtributoValorResponse> attrs = v.getAtributos().stream()
                             .map(av -> {
                                 AtributoValorResponse avr = new AtributoValorResponse();
@@ -592,12 +586,12 @@ public class ProductoServiceImpl implements ProductoService {
                                 avr.setValor(av.getValor());
                                 return avr;
                             })
-                            .collect(Collectors.toList());
+                            .toList();
 
                     vr.setAtributos(attrs);
                     return vr;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         response.setVariantes(variantesResponse);
         return response;
